--- a/src/pages/AuthPortal/authPortal.module.scss
+++ b/src/pages/AuthPortal/authPortal.module.scss
@@ -7,8 +7,12 @@
 
     .portal-wallpaper {
         display: flex;
+        justify-content: center;
+        align-items: center;
         flex: 3;
         background-color: $primary-color;
+        color: $quaternary-color;
+        font-size: 4rem;
     }
 
     .portal-form-container {
