Add navlink in notebook nav and create a sub route for notebook which is notebook-list route

--- a/src/components/Notebook/NotebookNav/notebookNav.module.scss
+++ b/src/components/Notebook/NotebookNav/notebookNav.module.scss
@@ -22,7 +22,7 @@
         justify-content: flex-end;
         gap: 1rem;
 
-        button {
+        .notebook-nav-btn {
             width: 3rem;
             height: 3rem;
             border-radius: 0.5rem;
